<resources>
    <string name="app_name">Assignment2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_key">AIzaSyBuOuyv4Sv_m1HRGZ_rhRtl3Ss3bD1KaQk</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="group">Group</string>
    <string name="group_name">Group Name:</string>
    <string name="Back">Back</string>
    <string name="Group_members">Group members</string>
    <string name="deregister">Deregister</string>
    <string name="memberName">Member name:</string>
    <string name="sendmsg">Send</string>
    <string name="english">English</string>
    <string name="svenska">Svenska</string>
    <string name="map">Map</string>
    <string name="Members">Members</string>
    <string name="Groups">Groups</string>
    <string name="Chat">Chat</string>
    <string name="registerMenu">Register</string>
    <string name="addGroup">Add group</string>
    <string name="newgroup">New group</string>
</resources>
